# aiogram3-fun-2

./: .gitignore  README.md  pyproject.toml
app/: __main__.py  config.py
app/routes/: __init__.py  basic.py
