[tool.poetry]
name = "aiogram3-fun-2"
version = "0.1.0"
description = ""
authors = ["Kudyakov Artem <t3m8ch@yandex.ru>"]
license = "MIT"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "3.0.0a12"
pydantic = "^1.8.2"
pydantic_loader = {extras = ["toml"], version = "^0.9.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
